sql/item_sum.cc
@@ -1808,7 +1808,7 @@ double Item_sum_std::val_real()
 {
   DBUG_ASSERT(fixed == 1);
   double nr= Item_sum_variance::val_real();
-  if (isnan(nr))
+  if (std::isnan(nr))
   {
     /*
       variance_fp_recurrence_next() can overflow in some cases and return "nan":
@@ -1820,7 +1820,7 @@ double Item_sum_std::val_real()
     null_value= true; // Convert "nan" to NULL
     return 0;
   }
-  if (my_isinf(nr))
+  if (std::isinf(nr))
     return DBL_MAX;
   DBUG_ASSERT(nr >= 0.0);
   return sqrt(nr);
